# puggle

./: .coverage  .gitignore  README.md  README.rst  example.py  mkdocs.yml  pyproject.toml  test.json  test.py
.github/workflows/: run-pylint.yml  run-tests.yml
docs/: basic_functionality.rst  conf.py  data_format.rst  index.rst  installation.rst  modules.rst  puggle.data_utils.rst  puggle.rst  requirements.txt
docs/puggle/: Dataset.md  Document.md  Mention.md  Relation.md  index.md  size_limits.md
ettools/: Dataset.py  Relation.py  __init__.py  size_limits.py
puggle/: Annotation.py  Dataset.py  Document.py  Mention.py  Relation.py  __init__.py  logger.py  size_limits.py  utils.py
puggle/data_utils/: __init__.py  manipulation.py  sampling.py  smart_sample.py  statistics.py
sample_data/: annotations.json  documents.csv
tests/: conftest.py  test_annotation.py  test_dataset.py  test_dataset_loading.py  test_dataset_manipulation.py  test_dataset_sampling.py  test_dataset_saving.py  test_dataset_sentence_splitting.py  test_dataset_statistics.py  test_document.py  test_utils.py
tests/test_dataset/: document_missing_all.json  example_dataset_100.json  example_dataset_500.json  hierarchical.json  hierarchical_after_flatten_ec.json  hierarchical_after_flatten_rc.json  invalid_document_1_long_word.json  invalid_document_2_long_sentence.json  invalid_document_3_missing_tokens.json  invalid_mentions_1_missing_keys.json  invalid_mentions_2_missing_keys.json  invalid_mentions_3_invalid_start_index.json  invalid_relations_1_mention_linked_to_itself.json  large.csv  (+36 more)
(+24 files in other folders)
